Mais ajustes após merge com a development e testes